@@ -332,6 +332,28 @@ override_redirect_cb (gpointer             callback_data,
   gtk_widget_show_all (window);
 }
 
+static void
+changing_icon_cb (gpointer             callback_data,
+                  guint                callback_action,
+                  GtkWidget           *widget)
+{
+  GtkWidget *window;
+  GtkWidget *vbox;
+  GtkWidget *label;
+  
+  window = gtk_window_new (GTK_WINDOW_TOPLEVEL);
+  gtk_window_set_title (GTK_WINDOW (window), "Changing Icon");
+  
+  vbox = gtk_vbox_new (FALSE, 0);
+
+  gtk_container_add (GTK_CONTAINER (window), vbox);
+
+  label = gtk_label_new ("This window has an icon that changes over time");
+  gtk_box_pack_start (GTK_BOX (vbox), label, FALSE, FALSE, 0);
+  
+  gtk_widget_show_all (window);
+}
+
 static gboolean
 focus_in_event_cb (GtkWidget *window,
                    GdkEvent  *event,
